Criando testes de API da integração e refatorando documentações
